--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         }
 
         div p {
-            background-color: blue;
+            background-color: rgb(150, 150, 192);
             color: white;
         }
     </style>
